fix: overflow

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -151,7 +151,7 @@ button {
   flex-direction: column;
   min-height: 100dvh;
   position: relative;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   main {
     flex: 1;
   }
